@@ -13,6 +13,7 @@
          "--initialize-at-run-time=com.sun.tools.javac.file.Locations,jdk.internal.jrtfs.SystemImage"
          "--initialize-at-build-time=clojure,cream,org.xml.sax,com.sun.tools.doclint,com.sun.tools.javac.parser.Tokens$TokenKind,com.sun.tools.javac.parser.Tokens$Token$Tag"
          "--features=ClojureFeature,clj_easy.graal_build_time.InitClojureClasses"
+         "--add-modules=java.net.http,java.sql,java.xml"
          "-H:+UnlockExperimentalVMOptions"
          "-H:Name=cream"
          "-H:+RuntimeClassLoading"
